Download pinned deb versions when not available via apt

--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -15,3 +15,18 @@
     state: present
   notify:
     - restart filebeat
+  register: filebeat_version_in_repo
+  ignore_errors: yes
+
+- name: download filebeat deb from elastic.co
+  get_url:
+    url: https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-amd64.deb
+    dest: /var/cache/apt/archives/filebeat-{{ filebeat_version }}-amd64.deb
+  when: filebeat_version_in_repo|failed
+
+- name: install filebeat deb from elastic.co
+  apt:
+    deb: /var/cache/apt/archives/filebeat-{{ filebeat_version }}-amd64.deb
+    state: present
+    force: yes
+  when: filebeat_version_in_repo|failed
